# freebsd-git-weekly

./: .gitignore  LICENSE  README.md  freebsd-git-weekly.css  pyproject.toml
freebsd/: 2025-09-01.toml  2025-09-08.toml  categories.toml  metadata.toml
projects/freebsd/: 2025-09-01.toml  2025-09-08.toml  2025-09-15.toml  2025-09-22.toml  2025-09-29.toml  2025-10-06.toml  2025-10-13.toml  2025-10-20.toml  2025-10-27.toml  2025-11-03.toml  2025-11-10.toml  2025-11-17.toml  2025-11-24.toml  2025-12-01.toml  2025-12-08.toml  2025-12-15.toml  2025-12-22.toml  2025-12-29.toml  2026-01-05.toml  2026-01-12.toml  2026-01-19.toml  2026-01-26.toml  2026-02-02.toml  2026-02-09.toml  2026-02-16.toml  2026-02-23.toml  2026-03-02.toml  2026-03-09.toml  2026-03-16.toml  2026-03-23.toml  2026-03-30.toml  2026-04-06.toml  2026-04-13.toml  2026-04-20.toml  2026-04-27.toml  2026-05-04.toml  2026-05-11.toml  2026-05-18.toml  2026-05-25.toml  2026-06-01.toml  (+9 more)
src/commits_periodical/: __init__.py  announcement.py  classify.py  commits_periodical.py  data.py  generate.py  gitlayer.py  html_templates.py  html_templates.toml  investigate.py  project_data.py  sanity_check.py  update.py  utils.py
